--- a/CSS/main.css
+++ b/CSS/main.css
@@ -28,20 +28,16 @@
 /*Responsive design bit*/
 @media screen and (max-width: 1132px) {
   footer {
-    margin-left: 20px !important;
     text-align: left !important;
   }
   header {
     width: 100% !important;
   }
-  .gen_text{
-    padding: 10px 10px 10px 10px !important;
-  }
-  .med_text{
-    padding: 10px 10px 10px 10px !important;
+  .photo_div {
+    margin: 10px !important;
   }
   .margin70 {
-    margin: 15px 0px 0px 20px !important;
+    margin: 0px 40px 0px 40px !important;
   }
   .margin40 {
     margin: 15px 20px 0px 20px !important;
@@ -129,8 +125,41 @@
 }
 
 @media screen and (max-width: 710px) {
+  footer {
+    margin-left: 20px !important;
+  }
   .rowcontainer {
     flex-wrap: wrap !important;
+  }
+  .margin40 {
+    margin: 15px 10px 0px 10px !important;
+  }
+  .gen_text{
+    padding: 10px 10px 10px 10px !important;
+  }
+  .med_text{
+    padding: 10px 10px 10px 10px !important;
+  }
+  .justify {
+    text-align: left !important;
+  }
+  #skill_list {
+    display: block !important;
+  }
+  #skill_table {
+    display: none !important;
+  }
+  #full_table1 {
+    display: none !important;
+  }
+  #full_table2 {
+    display: none !important;
+  }
+  #short_table1 {
+    display: block !important;
+  }
+  #short_table2 {
+    display: block !important;
   }
 }
 
@@ -154,22 +183,15 @@
     letter-spacing: -2px !important;
     margin-top: 30px !important;
   }
+  .margin40 {
+    margin: 10px 5px 0px 5px !important;
+  }
+  .margin70 {
+    margin: 0px 10px 0px 10px !important;
+  }
 }
   
 /*Main CSS*/
-#noscript {
-  font-family: Arial, sans-serif;
-  font-weight: bold;
-  display: block;
-  text-align: center;
-  width: 100%;
-  padding: 10px 10px 10px 10px;
-  box-sizing: border-box;
-  font-size: 14px;
-  background-color: #fff568;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-}
-
 html {
   height: 100%;
   width: 100%;
@@ -298,6 +320,34 @@ nav a:hover {
 
 .genphoto {
   border: none;
+  margin-top: 20px;
+}
+
+.table_img {
+  vertical-align: middle;
+}
+
+.nodecoration {
+  border: none;
+}
+
+.nodecoration td {
+  padding: 10px;
+  padding-right: 30px;
+}
+
+.block_ {
+  display: block !important;
+}
+
+.no_bottom {
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
+}
+
+.no_top {
+  padding-top: 0px !important;
+  margin-top: 0px !important;
 }
 
 .standard_table {
@@ -307,60 +357,23 @@ nav a:hover {
   line-height: 1.3;
   font-size: 17px;
   padding: 5px;
+  margin: 0
 }
 
-.standard_table, th {
+.decorated th {
   border: 0px;
   border-bottom: 1px solid #004f7d;
   padding: 5px;
 }
 
-.standard_table, td {
+.decorated td {
   border: 0px;
-  padding: 5px;
+  padding: 10px;
 }
 
-.standard_table tr:nth-child(even) {
+.decorated_colour tr:nth-child(even) {
   background-color: #cbe4f2;
   }
-
-.centred {
-  width: 100%;
-  text-align: center;
-}
-
-.centred_txt {
-  text-align: center;
-}
-
-.black {
-  background-color: #131313;
-  color: #efefef;
-}
-
-.justify {
-  text-align: justify;
-}
-
-.fullwidth {
-  width: 100%;
-}
-  
-.margin0 {
-  margin: 0px 0px 0px 0px;
-}
-  
-.margin70 {
-  margin: 15px 0px 0px 70px;
-}
-  
-.margin40 {
-  margin: 15px 40px 0px 40px;
-}
-  
-.margin30 {
-  margin: 15px 30px 0px 30px;
-}
   
 .gen_text {
   font-family: questrialregular, arial, "sans-serif";
@@ -370,6 +383,10 @@ nav a:hover {
   display: block;
   box-sizing: border-box;
   left: 0;
+}
+
+.title_text {
+  font-size: 21px;
 }
   
 .med_text {
@@ -433,7 +450,6 @@ nav a:hover {
    
 .gen_title {
   font-family: questrialregular, arial, "sans-serif";
-  font-size: 21px;
   font-weight: bold;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
   text-align: left;
@@ -448,9 +464,8 @@ nav a:hover {
 }
   
 .gen_div {
-  background-color: white;
+  background-color: inherit;
   padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
   display: inline-flex;
 }
  
@@ -459,7 +474,7 @@ nav a:hover {
   width: 300px;
   overflow: hidden;
   padding: 0px;
-  margin: 30px;
+  margin: 20px;
   display: block;
   background-color: transparent;
   transition: 0.1s 0.5s opacity ease;
@@ -537,11 +552,6 @@ nav a:hover {
   visibility: hidden;
 }
 
-.active_design_div img {
-  max-height: none !important;
-  max-width: none !important;
-}
-  
 .active_design_div p {
   display: block;
   padding: 10px 10px 10px 10px;
@@ -589,8 +599,63 @@ nav a:hover {
   display: flex;
 }
 
+.centred {
+  width: 100%;
+  text-align: center;
+}
+
+.centred_txt {
+  text-align: center;
+}
+
+.right_txt {
+  text-align: right;
+}
+
+.black {
+  background-color: #131313;
+  color: #efefef;
+}
+
+.justify {
+  text-align: justify;
+}
+
+.fullwidth {
+  width: 100%;
+}
+  
+.margin0 {
+  margin: 0px 0px 0px 0px;
+}
+  
+.margin70 {
+  margin: 0px 60px 0px 70px;
+}
+  
+.margin40 {
+  margin: 15px 40px 0px 40px;
+}
+  
+.margin30 {
+  margin: 15px 30px 0px 30px;
+}
+
 #empty {
   /*Don't put anything here*/
+}
+
+#noscript {
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+  width: 100%;
+  padding: 10px 10px 10px 10px;
+  box-sizing: border-box;
+  font-size: 14px;
+  background-color: #fff568;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
 #index_footer {
@@ -678,19 +743,24 @@ nav a:hover {
   display: none;
   margin: 0px 0px 10px 30px;
 }
-  
-#DESIGN {
-  opacity: 1;
-  display: block;
-  position: inherit;
-  height: auto;
-  width: 100%;
-  text-align: right;
-  transition: 0.2s opacity linear;
-  webkit-transition: 0.2s opacity linear;
+
+#skill_list {
+  display:none;
 }
-  
-#PHOTO {
+
+#skill_list ul{
+  list-style-type: none;
+  line-height: 3;
+}
+
+#short_table1 {
+  display: none;
+}
+#short_table2 {
+  display: none;
+}
+
+#DESIGN, #PHOTO {
   opacity: 1;
   display: block;
   position: inherit;
@@ -699,6 +769,8 @@ nav a:hover {
   text-align: right;
   transition: 0.2s opacity linear;
   webkit-transition: 0.2s opacity linear;
+  padding: 0;
+  margin: 30px 0px 30px 0px;
 }
 
 #blackdiv {
@@ -726,27 +798,27 @@ nav a:hover {
   
 /* Body background images*/
 #bhome {
-  background-image: url("../images/bgtile.png");
+  background-image: url("../images/bg/bgtile.png");
 }
 
 #bprof {
-  background-image: url("../images/protile.png");
+  background-image: url("../images/bg/protile.png");
 }
 
 #bsoft {
-  background-image: url("../images/softile.png");
+  background-image: url("../images/bg/softile.png");
 }
   
 #bdesign {
-  background-image: url("../images/destile.png");
+  background-image: url("../images/bg/destile.png");
 }
   
 #bphoto {
-  background-image: url("../images/photile.png");
+  background-image: url("../images/bg/photile.png");
 }
   
 #bcont {
-  background-image: url("../images/contile.png");
+  background-image: url("../images/bg/contile.png");
 }
 
 /* Sprites */
@@ -770,7 +842,7 @@ nav a:hover {
 }
 
 #linkedin:hover {
-  background: url("../images/sprites/small_icons.gif") 21px -21px;
+  background: url("../images/sprites/small_icons.gif") 20px -21px;
 }
 
 #facebook {
@@ -778,7 +850,7 @@ nav a:hover {
 }
 
 #facebook:hover {
-  background: url("../images/sprites/small_icons.gif") 21px -42px;
+  background: url("../images/sprites/small_icons.gif") 20px -42px;
 }
 
 #github {
@@ -786,7 +858,7 @@ nav a:hover {
 }
 
 #github:hover {
-  background: url("../images/sprites/small_icons.gif") 21px 0px;
+  background: url("../images/sprites/small_icons.gif") 20px 0px;
 }
 
 #emailme {
@@ -794,7 +866,7 @@ nav a:hover {
 }
 
 #emailme:hover {
-  background: url("../images/sprites/small_icons.gif") 21px -63px;
+  background: url("../images/sprites/small_icons.gif") 20px -63px;
 }
 
 #linkedin_dark {
@@ -802,7 +874,7 @@ nav a:hover {
 }
 
 #linkedin_dark:hover {
-  background: url("../images/sprites/small_icons_dark.gif") 21px -21px;
+  background: url("../images/sprites/small_icons_dark.gif") 20px -21px;
 }
 
 #facebook_dark {
@@ -810,7 +882,7 @@ nav a:hover {
 }
 
 #facebook_dark:hover {
-  background: url("../images/sprites/small_icons_dark.gif") 21px -42px;
+  background: url("../images/sprites/small_icons_dark.gif") 20px -42px;
 }
 
 #github_dark {
@@ -818,7 +890,7 @@ nav a:hover {
 }
 
 #github_dark:hover {
-  background: url("../images/sprites/small_icons_dark.gif") 21px 0px;
+  background: url("../images/sprites/small_icons_dark.gif") 20px 0px;
 }
 
 #emailme_dark {
@@ -826,7 +898,7 @@ nav a:hover {
 }
 
 #emailme_dark:hover {
-  background: url("../images/sprites/small_icons_dark.gif") 21px -63px;
+  background: url("../images/sprites/small_icons_dark.gif") 20px -63px;
 }
 
 /* Contacts Sprites */
