--- a/css/main.css
+++ b/css/main.css
@@ -597,6 +597,10 @@ nav a:hover {
   margin: 0px 0px 0px 0px;
 }
 
+.main_glyph {
+  font-family: glyphsubset, 'Segoe UI Symbol';
+}
+
 .inline_item {
   display: inline-block;
 }
