--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,29 @@ nav a:hover {
   margin: 0px 0px 0px 20px;
 }
 
+.errorpage_txt {
+  font-size: 150px;
+  letter-spacing: 0px;
+  padding: 15px 0px 10px 0px;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  margin: 0px;
+  display: block;
+  line-height: 120px;
+}
+
+.error_txt_small {
+  font-family: abeezeeregular, arial, "sans-serif";
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  line-height: 1.3;
+  padding: 0;
+  display: block;
+  box-sizing: border-box;
+  color: #004f7d;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: bold;
+}
+
 .myphoto {
   width: auto;
   height: 150px;
@@ -1129,6 +1152,11 @@ nav a:hover {
   
 #bcont {
   background-image: url("../images/bg/contile.png");
+  background-color: white;
+}
+
+#b500 {
+  background-image: url("../images/bg/ertile1.png");
   background-color: white;
 }
 
